--- a/main.css
+++ b/main.css
@@ -35,10 +35,59 @@ div.sticky {
     top: 0;
 }
 
+div.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 8px;
+}
+
 h1, h2, h3, h4, h5, h6, p {
     text-rendering: optimizeLegibility;
     display: inline;
 }
+
+
+
+
+
+h1, h1 a {
+    font-size: 24pt;
+    color: black;
+    text-decoration: none;
+}
+
+h2, h2 a {
+    font-size: 14pt;
+    color: black;
+    text-decoration: none;
+}
+
+h3, h3 a {
+    font-size: 16pt;
+    color: black;
+    text-decoration: none;
+}
+
+h6, h6 a {
+    font-size: 10pt;
+    color: #666;
+}
+
+h6 a:hover {
+    color: #888;
+}
+
+p, p a {
+    color: black;
+}
+
+p a:hover {
+    color: #444;
+}
+
 
 
 
@@ -78,7 +127,8 @@ div#main {
 div#form-container {
     height: auto;
     width: 100%;
-    margin: 16px 0px;
+    margin-top: 16px;
+    margin-bottom: 24px;
 }
 
 div#form-container > form {
@@ -94,7 +144,7 @@ div#result {
     width: 100%;
 }
 
-div#result h4 {
+div#result h3 {
     display: inline-block;
     margin-bottom: 10px;
 }
