--- a/main.css
+++ b/main.css
@@ -41,6 +41,11 @@ h1, h2, h3, h4, h5, h6, p {
     display: inline;
 }
 
+a {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
 
 
 
@@ -178,6 +183,67 @@ div#result img {
 div#result p {
     display: inline-block;
     margin-top: 5px;
+}
+
+
+
+
+
+.modal {
+    position: fixed;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    padding-top: 100px;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+    display: none;
+}
+
+.modal-content {
+    min-height: 242px; /* 200 (image) + 2*20 (padding) + 2*1 (border) */
+    width: 800px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    background-color: #fefbfb;
+}
+
+    .modal-content h3 {
+        display: inline-block;
+        text-align: center;
+        max-width: 526px;
+        margin: 0px 16px 5px;
+    }
+
+    .modal-content p {
+        display: inline-block;
+        max-width: 526px;
+        margin: 5px 16px;
+    }
+
+    .modal-content img {
+        float: left;
+        height: 200px;
+        width: 200px;
+        border-radius: 8px;
+    }
+
+.modal-close {
+    float: right;
+    color: #aaa;
+    font-size: 28px;
+    font-weight: bold;
+    text-decoration: none;
+    cursor: pointer;
+    margin-top: -9px;
+}
+
+.modal-close:hover, .modal-close:focus {
+    color: #000;
 }
 
 
